# ancap_ia_challenge_2025

./: .gitignore  README.md
backend/: .env.example  compose.yaml  servers_config.json
backend/data-service/: .env.example  Dockerfile  main.py  pyproject.toml
backend/data-service/api/query/: router.py
backend/data-service/app/: main.py
backend/data-service/config/: settings.py
backend/data-service/models/data/: model.py
backend/data-service/models/query/: model.py
backend/data-service/services/: bigquery_service.py  data_service.py
backend/data-service/utils/: cache_connection.py  cache_setup.py  text_parser.py
backend/database/: Dockerfile
backend/database/exported_schema/: export.json
backend/database/pb_data/: auxiliary.db-shm  auxiliary.db-wal  data.db-shm  data.db-wal
backend/database/pb_data/backups/: 261205.zip.attrs  users_baseline.zip.attrs
backend/database/pb_migrations/: 1749251496_created_roles.js  1749251593_updated_users.js  1749251626_created_conversations.js  1749251734_created_queries.js  1749251790_created_queries_data.js  1749251860_created_dashboards.js  1749253307_updated_users.js  1749258659_updated_conversations.js  1749326986_updated_conversations.js  1749327007_updated_conversations.js  1749327330_updated_queries.js  1749332701_updated_queries.js  1749511232_updated_conversations.js  1749511259_updated_queries.js  1749511376_updated_conversations.js  1749511389_updated_users.js  1749511399_updated_queries.js  1749511405_updated_queries_data.js  1749511411_updated_dashboards.js  1749837095_deleted_roles.js  1749844512_updated_conversations.js  1749954559_updated_queries.js  1750002896_updated_queries.js  1750002964_updated_queries.js  1750341003_updated_queries.js  1750638364_created_charts.js  1750642989_updated_charts.js
backend/llm-service/: .env.example  README.md  dockerfile  main.py  pyproject.toml
backend/llm-service/db/: dbconnection.py
backend/llm-service/routers/: admin.py  conversation.py
backend/llm-service/services/: agent.py  chart_agent.py  schema_client.py  sql_processing.py
backend/llm-service/utils/: auth.py  connection.py  constants.py  settings.py  transformers.py
frontend/anc_app/: .firebaserc  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
frontend/anc_app/.dart_tool/: package_config.json  package_config_subset
frontend/anc_app/.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  DIPS-wal  Favicons  Favicons-journal  History  History-journal  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  (+3 more)
frontend/anc_app/.dart_tool/extension_discovery/: vs_code.json
frontend/anc_app/.firebase/: hosting.LmZpcmViYXNlL2FuY2FwLWVxdWlwbzIvaG9zdGluZw.cache  hosting.LmZpcmViYXNlXGFuY2FwLWVxdWlwbzJcaG9zdGluZw.cache
frontend/anc_app/android/app/: build.gradle.kts
frontend/anc_app/assets/env/: dev.ancap.toml
frontend/anc_app/ios/Runner/: Info.plist
frontend/anc_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/anc_app/lib/: main.dart
frontend/anc_app/lib/src/: app.dart  assets.dart  build_args.dart  colors.dart  di.dart  env.dart
frontend/anc_app/linux/: CMakeLists.txt
frontend/anc_app/linux/runner/: my_application.cc
frontend/anc_app/macos/Runner.xcodeproj/: project.pbxproj
frontend/anc_app/test/: widget_test.dart
frontend/anc_app/web/: index.html
frontend/anc_app/windows/: CMakeLists.txt
frontend/anc_app/windows/runner/: Runner.rc  main.cpp
(+111 files in other folders)
