[project]
name = "mcp-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago Morón Santos",email = "santimoron001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "mcp (>=1.9.1,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
